--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="text_press_again">再按一次退出easywork</string>
     <string name="title_dialog_tips">提示</string>
+
+    <string name="data_source_memory">内存</string>
+    <string name="data_source_disk">磁盘</string>
+    <string name="data_source_network">网络</string>
 </resources>
