--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,13 @@
     <string name="text_press_again">再按一次退出easywork</string>
     <string name="title_dialog_tips">提示</string>
 
+    <string-array name="tab_title">
+        <item>联系人</item>
+        <item>探索</item>
+    </string-array>
+
     <string name="data_source_memory">内存</string>
     <string name="data_source_disk">磁盘</string>
+
     <string name="data_source_network">网络</string>
 </resources>
