--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="data_source_disk">磁盘</string>
 
     <string name="data_source_network">网络</string>
+
+    <string-array name="spinner_type">
+        <item>短号</item>
+        <item>长号</item>
+    </string-array>
 </resources>
