--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,11 @@
 
     <string name="data_source_memory">内存</string>
     <string name="data_source_disk">磁盘</string>
-
     <string name="data_source_network">网络</string>
+
+    <string name="login_fail">登录失败</string>
+    <string name="re_login">数据加载错误，请重新登录</string>
+    <string name="ok">好的，我知道了</string>
 
     <string-array name="spinner_type">
         <item>短号</item>
